# rust_project

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
.sqlx/: query-15d1cb1ff311bb9c554679092e98c2159962342b3b24ab227076dad73dd57f25.json  query-94a2246d82ec39f1aaf4ae8f985067b6dcc8d38be7f33e06c109edda61903be6.json  query-985af708806201668e54b0c019e294d3d4c43678e193033694cb49c00a8ebaa8.json
src/: error.rs  main.rs  state.rs
src/auth/: extractor.rs  hash.rs  jwt.rs  mod.rs  role.rs
src/handlers/: auth_handler.rs  user_handler.rs
src/models/: auth.rs  user.rs
src/routes/: auth.rs  user.rs
src/utils/: api_response.rs
