[package]
name = "testing-rust"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "uuid",
  "chrono",
  "json"
]}
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
validator = { version = "0.18", features = ["derive"] }
jsonwebtoken = "9"
bcrypt = "0.15"
time = "0.3"
sha2 = "0.10"
hex = "0.4"
tower_governor = "0.4"
tower = "0.4"
redis = { version = "0.24", features = ["tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }